added answers to questions for 1,2,3 lab

--- a/Lab1/Lab1.html
+++ b/Lab1/Lab1.html
@@ -14682,6 +14682,56 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 </div>
 </div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="%D0%9A%D0%BE%D0%BD%D1%82%D1%80%D0%BE%D0%BB%D1%8C%D0%BD%D1%96-%D0%B7%D0%B0%D0%BF%D0%B8%D1%82%D0%B0%D0%BD%D0%BD%D1%8F">&#1050;&#1086;&#1085;&#1090;&#1088;&#1086;&#1083;&#1100;&#1085;&#1110; &#1079;&#1072;&#1087;&#1080;&#1090;&#1072;&#1085;&#1085;&#1103;<a class="anchor-link" href="#%D0%9A%D0%BE%D0%BD%D1%82%D1%80%D0%BE%D0%BB%D1%8C%D0%BD%D1%96-%D0%B7%D0%B0%D0%BF%D0%B8%D1%82%D0%B0%D0%BD%D0%BD%D1%8F">&#182;</a></h3><ol>
+<li>У чому відмінність інтерпретатора від компілятора? Python - компілятор чи інтерпретатор?</li>
+</ol>
+<ul>
+<li>Компілятор перетворює вихідний код програми у машинний код (наприклад, файл .exe), транслюється один раз (дію необхідно повторювати щоразу, коли змінюється вихідний код)</li>
+<li>Інтерпретація - користувач коду може перекладати вихідну програму щоразу, коли вона має бути запущена </li>
+<li>Python - інтерпретатор</li>
+</ul>
+<ol>
+<li>Що таке IDE PyCharm?</li>
+</ol>
+<ul>
+<li>Інтегрована середа розробки (IDE) для мови програмування Python, (іншими словами це зручний інтерфейс для роботи з Python, який маэ велику кількістю різноманітних додаткових функцій)</li>
+</ul>
+<ol>
+<li>Що таке система контроля версій (СКВ) і для чого вона призначена? У чому принципова відмінність СКВ svn та git?</li>
+</ol>
+<ul>
+<li>СКВ - це програма або інструмент, призначений для зберігання, контролю та відстеження історії файлів/проектів у директоріях. Існують два основних типи: централізована та розподілена.</li>
+<li>Git (розподілена система) працює незалежно від центрального сервера. З іншого боку, SVN використовує централізовану архітектуру.</li>
+</ul>
+<ol>
+<li>Що відбувається при виконанні команди <code>git add .</code>?</li>
+</ol>
+<ul>
+<li>Вибирає всі файли, необхідні для подальшого коментаря</li>
+</ul>
+<ol>
+<li>Що відбувається при виконанні команди <code>git commit</code>?</li>
+</ol>
+<ul>
+<li>Додає коментар</li>
+</ul>
+<ol>
+<li>Якою git-командою виконується розміщення локальної копії git-репозиторію проєкта на віддаленому, що знаходиться на GitHub?</li>
+</ol>
+<ul>
+<li>git push</li>
+</ul>
+
+</div>
+</div>
+</div>
+</div>
 </body>
 
 
