--- a/Lab2/Lab2.html
+++ b/Lab2/Lab2.html
@@ -14987,6 +14987,35 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 
 </div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="%D0%9A%D0%BE%D0%BD%D1%82%D1%80%D0%BE%D0%BB%D1%8C%D0%BD%D1%96-%D0%B7%D0%B0%D0%BF%D0%B8%D1%82%D0%B0%D0%BD%D0%BD%D1%8F">&#1050;&#1086;&#1085;&#1090;&#1088;&#1086;&#1083;&#1100;&#1085;&#1110; &#1079;&#1072;&#1087;&#1080;&#1090;&#1072;&#1085;&#1085;&#1103;<a class="anchor-link" href="#%D0%9A%D0%BE%D0%BD%D1%82%D1%80%D0%BE%D0%BB%D1%8C%D0%BD%D1%96-%D0%B7%D0%B0%D0%BF%D0%B8%D1%82%D0%B0%D0%BD%D0%BD%D1%8F">&#182;</a></h3><ol>
+<li>Записати ієрархію операторів.</li>
+</ol>
+<ul>
+<li>1 = високий, 4 = ничжий: <br> 1) +, - (унарний) <br> 2) *<em>  <br> 3) </em>, /, % <br> 4) +, - (бінарний)</li>
+</ul>
+<ol>
+<li>Записти на Python обчислення виразу $3^{3^4}$</li>
+</ol>
+<ul>
+<li>print(3 <strong> (3 </strong> 4))</li>
+</ul>
+<ol>
+<li>Що робить escape-символ \n при виводі на екран функцією <code>print()</code>?</li>
+</ol>
+<ul>
+<li>переносить на наступний рядок</li>
+</ul>
+
+</div>
+</div>
+</div>
+</div>
 </body>
 
 
